quick spacing fixes

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   align-items: center;
   height: 100vh;
   background-color: #ECF8FE;
+  overflow-y: auto;
 }
 
 .container {
@@ -19,8 +20,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-
-  overflow-y: auto;
 
   background-color: #ECF8FE;
 }
@@ -78,7 +77,7 @@ button {
   padding: 10px 20px;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 1rem;
+  font-size: 0.8rem;
   margin-top: 20px;
   width: 100%;
 }
