--- a/src/styles/question.css
+++ b/src/styles/question.css
@@ -12,7 +12,7 @@
 
 .question-page h1 {
     margin-top: calc(100vh * 0.05);
-
+    font-size: 1.5rem;
 }
 
 .question-page button.selected {
